finished first page

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "browser-sync": "^2.26.3",
     "gulp": "^4.0.0",
     "gulp-sass": "^4.0.2"
+  },
+  "dependencies": {
+    "inter-ui": "^3.3.4"
   }
 }
